Added modular example